--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -1,10 +1,8 @@
 .footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: black;
     text-align: end;
-    // display: flex;
-    // flex-direction: reverse;
-    // flex-wrap: wrap;
-    position: relative;
-    
-    // bottom: -130px;
-
 }
